cyph.com/css/cyph.com.scss
@import 'bourbon/bourbon';


html:not(.load-complete) {
	#main > section, footer, #bouncing-down-arrow {
		display: none;
	}
}

section#main {
	background-color: rgba(139, 98, 217, 0.75) !important;
}

#main, #main section {
	min-height: 100vh;
}
#main section {
	padding: 50px;
	position: relative;
}

#background-video {
	z-index: 1;
	position: fixed;
	top: -1px;
	left: -1px;
	width: 101%;
	height: 101%;
	background-color: black;

	> * {
		min-height: 100%;
		min-width: 100%;
	}
}

:not(.md-toolbar-tools) > md-button {
	font-size: 14px;
	width: auto;
	margin-bottom: 6px;
	box-shadow: 0px 0px 2px #7239dd;
	color: #444;
	background-color: #7d4fd3 !important;
}
md-button.focus, md-button:hover {
	background-color: #7239dd !important;
}

#new-cyph {
	font-family: 'Ubuntu';
	line-height: 50px;
	font-size: 18px;
	box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.25);

	position: absolute;
	top: calc(50% - 31px);
	left: calc(50% - 100px);
	margin-left: auto;
	margin-right: auto;
	width: 200px;
}

.hero-text {
	font-family: 'Ubuntu';
	width: 100%;
	text-align: center;
	position: absolute;
	top: 100px;
	margin-left: -50px;
}

html:not(.mobile) .hero-text {
	font-size: 50px;
}
html.mobile .hero-text {
	font-size: 36px;
}


#main-toolbar, #new-cyph.fixed-header {
	top: 0px !important;
}

#new-cyph.fixed-header {
	z-index: 12;
	position: fixed;
	@include transform(scale(0.6) !important);
	@include transition(transform 0.1s ease-in-out);
}

#main-toolbar {
	position: fixed;
	z-index: 11;
	height: 65px !important;
	background-color: rgba(97, 51, 163, 0.75);
}

#logo {
	top: 17px;
	left: 2.5vw;
	height: 35px;

	> img {
		height: auto !important;
		max-height: 100%;
		max-width: 25vw;
	}
}
#bouncing-down-arrow {
	width: auto;
	height: 40px;
	top: calc(100% - 100px);
	left: calc(50% - 20px);
	border-radius: 100%;
	border: 1px solid rgba(255, 255, 255, 0.5) !important;
	cursor: pointer;
}
#logo, #bouncing-down-arrow {
	position: fixed;
	z-index: 13;

	> img {
		width: auto;
		height: 100%;
	}
}


#main-toolbar, #bouncing-down-arrow.fixed-header {
	opacity: 0;
	pointer-events: none;
	@include transition(opacity 0.5s ease-in-out);
}
#bouncing-down-arrow:not(.fixed-header), #main-toolbar.fixed-header {
	opacity: 1;
	pointer-events: all;
	@include transition(opacity 0.5s ease-in-out);
}


#footer {
	padding-bottom: 50px;
	background-color: rgba(97, 51, 163, 0.75);

	> section {
		min-height: 0px;
		height: auto;
	}

	.footer-info, .footer-bullshit {
		padding: 0px 5%;
		line-height: 30px;
	}

	.footer-bullshit {
		margin-top: 30px;
		font-size: 75%;
	}

	.beta-signup-form {
		width: 100%;
		max-width: 300px;
		margin-left: auto;
		margin-right: auto;
	}
}



#error {
	h1 {
		text-align: center;
		font-family: 'Ubuntu', sans-serif;
		font-size: 2.5vw;
	}

	> * {
		width: 66%;
		margin-left: auto;
		margin-right: auto;
		display: block;
	}

	li {
		margin-bottom: 15px;
	}
}



.section-content-container {
	width: 100%;
	max-width: 620px;
	margin-top: 175px;
	margin-left: auto;
	margin-right: auto;

	> p {
		padding-bottom: 15px;
	}

	md-input-group {
		padding: 0px 10vw;
	}

	li {
		margin-bottom: 15px;
	}
}

.founder-photos {
	padding: 20px;

	> * {
		width: calc(40%);

		* {
			width: 100%;
			display: block;
			margin-left: auto;
			margin-right: auto;
			text-align: center;
		}

		img {
			width: 75%;
			max-width: 200px;
			margin-bottom: 20px;
			border-radius: 100%;
			box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.25) !important;
		}
	}

	> :nth-child(1) {
		float: left;
	}

	> :nth-child(2) {
		float: right;
	}

	> *:not(.bounceInLeft):not(.bounceInRight) {
		visibility: hidden;
	}
}
.founder-photos:after {
	clear: both;
	content: '';
	display: block;
}

.beta-signup-form {
	opacity: 0;
	color: #f1f1f1;

	* {
		color: #f1f1f1;
		width: 100%;
	}
	*:not(p):not(p *) {
		display: block;
	}

	md-input-group.md-input-focused * {
		color: #c9adff !important;
		border-color: #c9adff !important;
	}

	md-button {
		margin: 25px auto;
		width: calc(100% - 100px);
		min-width: 200px;
	}
}

.beta-signup-form md-button, #new-cyph-footer {
	font-family: 'Ubuntu' !important;
	line-height: 50px !important;
	font-size: 18px !important;
	box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.25) !important;
}
#new-cyph-footer {
	width: 200px;
	@include transform(scale(0.75) !important);
}

.beta-signup-form + div {
	opacity: 0;
	pointer-events: none;
	position: fixed;
	z-index: 99;
	top: 0px;
	left: 0px;
	width: 101%;
	height: 101%;
	font-size: 5vw;
	padding: 15vh 15vw;
	background-color: rgba(97, 51, 163, 0.75);
	font-family: 'Ubuntu' !important;
}

.beta-signup-form.complete + div, .beta-signup-form.visible {
	opacity: 1;
	@include transition(opacity 500ms 1s linear);
}

.hidden-submit-button {
	visibility: hidden;
	position: absolute;
	pointer-events: none;
}

#podcast-section {
	.hero-text {
		top: 20px;

		img {
			max-width: 450px;
			max-height: 175px;
		}
	}
}

#main.unisection-mode {
	> section:not(.unisection), #bouncing-down-arrow {
		display: none;
	}
}



#hero-section, #podcast-section {
	min-height: 0px !important;
	height: auto !important;
}
#hero-section, #about {
	background-color: rgba(0, 0, 0, 0.15);
}

#home-beta-signup {
	text-align: center !important;
	padding: 0px !important;
	height: 300px !important;
	max-height: 300px !important;
	min-height: 300px !important;

	.section-content-container {
		margin-top: 50px;
	}

	md-button {
		@include transform(scale(0.75) !important);
		width: 200px !important;
		display: block;
		margin-left: auto;
		margin-right: auto
	}
}

